fix(devspace): correct spacing in layout

--- a/src/app/features/workspace/components/devspace-sidenav-content/devspace-sidenav-content.responsive.scss
+++ b/src/app/features/workspace/components/devspace-sidenav-content/devspace-sidenav-content.responsive.scss
@@ -42,6 +42,16 @@ $radius-pill: 999px;
     justify-self: start;
   }
 
+  .section-addon-button {
+    svg {
+      width: 26px;
+      height: 26px;
+    }
+    svg > path {
+      fill: $color-brand;
+    }
+  }
+
   .add-item-button {
     @include mixins.text-style(
       $size: 18px,
