--- a/src/app/features/workspace/components/devspace-sidenav-content/devspace-sidenav-content.scss
+++ b/src/app/features/workspace/components/devspace-sidenav-content/devspace-sidenav-content.scss
@@ -26,6 +26,12 @@ a {
   text-decoration: none;
 }
 
+.devspace-elements-gap {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
 .sidenav {
   width: 100%;
   height: 100%;
@@ -90,12 +96,6 @@ a {
   }
 }
 
-.channels-and-contacts {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
 .contact-item-anker {
   display: block;
   text-decoration: none;
@@ -153,15 +153,12 @@ app-contact-item {
   flex-direction: column;
   list-style: none;
   width: 100%;
+  padding-left: 30px;
+  margin: 0;
 
   > li {
     min-width: 0;
   }
-}
-
-.contacts-list {
-  padding-left: 20px;
-
 }
 
 .section-header {
@@ -177,12 +174,11 @@ app-contact-item {
   justify-content: center;
   transition: all 125ms ease-in-out;
   border-radius: 50%;
-  width: 32px;
-  height: 32px;
+  padding: 2px;
 
   > svg {
-    width: 100%;
-    height: 100%;
+    width: 24px;
+    height: 24px;
   }
 
   &:hover {
@@ -219,8 +215,7 @@ app-contact-item {
   align-items: center;
   gap: 10px;
   margin-left: 16px;
-  padding-left: 40px;
-  margin-top: 20px;
+  padding-left: 30px;
   @include mixins.text-style(
     $size: 18px,
     $color: #000000,
@@ -243,7 +238,7 @@ app-contact-item {
   display: flex;
   align-items: center;
   gap: 15px;
-  padding: 4px 40px;
+  padding: 4px 50px;
   border-radius: 30px;
   min-height: 58px;
   cursor: pointer;
